--- a/style.css
+++ b/style.css
@@ -210,7 +210,7 @@ li:hover ul{
 
 .form-contato-container{
   background-color: #A9BA9D;
-  background-image: url("/imagens/pessoacomgrafico.png");
+  background-image: url("./imagens/pessoacomgrafico.png");
 }
 
 .form-contato{
